--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only  src/server.ts"
+    "dev": "ts-node-dev --transpile-only  src/server.ts",
+    "build": "tsup src"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
